package cetty.config

import "cetty/config/config.proto"

option config.config_file_name = "";
option config.source_file_name = "KeyValuePair";

message KeyValuePair {
	option config.encoded = "{key}={value}";
	
	optional string   key = 1;
	optional string value = 2;
}
